--- a/themes/monkey-theme/assets/css/main.css
+++ b/themes/monkey-theme/assets/css/main.css
@@ -1,3 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+
+@import "_reset";
+
 body {
     background-color: #ffff;
     background: fixed
@@ -7,17 +12,29 @@ body {
             rgba(30, 89, 177, 1) 40%,
             rgba(0, 255, 160, 1) 100%
         );
+    font-family: "Montserrat", sans-serif;
 }
 
-#main {
+p {
+    font-family: "Open Sans", sans-serif;
+    font-size: 0.9em;
+}
+
+#content {
     color: #fff;
-    /* color: #000; */
     background: rgba(255, 255, 255, 0.25);
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
     border-radius: 10px;
     border: 1px solid rgba(255, 255, 255, 0.18);
+    max-width: 960px;
+    padding: 15px;
+}
+
+pre {
+    padding: 15px;
+    border-radius: 10px;
 }
 
 #main.a {
