--- a/themes/monkey-theme/layouts/_default/baseof.html
+++ b/themes/monkey-theme/layouts/_default/baseof.html
@@ -3,7 +3,7 @@
     {{- partial "head.html" . -}}
     <body>
         {{- partial "header.html" . -}}
-        {{- partialCached "navigation.html" . -}}
+        {{- partial "navigation.html" . -}}
         <div id="content">
         {{- block "main" . }}{{- end }}
         </div>
