--- a/themes/monkey-theme/assets/css/main.css
+++ b/themes/monkey-theme/assets/css/main.css
@@ -2,47 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 
 @import "_reset";
+@import "_vars";
+@import "_globals";
 @import "_nav";
-
-body {
-    background-color: #ffff;
-    background: fixed
-        linear-gradient(
-            to top right,
-            rgb(100, 29, 141) 0%,
-            rgba(30, 89, 177, 1) 40%,
-            rgba(0, 255, 160, 1) 100%
-        );
-    font-family: "Montserrat", sans-serif;
-}
-
-p {
-    font-family: "Open Sans", sans-serif;
-    font-size: 0.9em;
-}
-
-#content {
-    color: #fff;
-    background: rgba(255, 255, 255, 0.25);
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-    backdrop-filter: blur(4px);
-    -webkit-backdrop-filter: blur(4px);
-    border-radius: 10px;
-    border: 1px solid rgba(255, 255, 255, 0.18);
-    max-width: 960px;
-    padding: 15px;
-}
-
-pre {
-    padding: 15px;
-    border-radius: 10px;
-}
-
-#main.a {
-    background: rgba(0, 0, 0, 0.25);
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-    backdrop-filter: blur(4px);
-    -webkit-backdrop-filter: blur(4px);
-    border-radius: 10px;
-    border: 1px solid rgba(255, 255, 255, 0.18);
-}
+@import "_lists";
