--- a/themes/monkey-theme/layouts/partials/navigation.html
+++ b/themes/monkey-theme/layouts/partials/navigation.html
@@ -1,14 +1,25 @@
 {{ if .Site.Menus.main }}
-<nav class="nav" role="navigation">
+<nav class="nav hide" role="navigation">
     <ul class="navList">
-        {{ range .Site.Menus.main }}
+        {{ $current := . }} {{ range .Site.Menus.main }} {{ $active := or
+        ($current.IsMenuCurrent "main" .) ($current.HasMenuCurrent "main" .) }}
+        {{ $active = or $active (eq .Name $current.Title) }} {{ $active = or
+        $active (and (eq .Name "Posts") (eq $current.Section "posts")) }} {{
+        $active = or $active (and (eq .Name "Projects") (eq $current.Section
+        "projects")) }} {{ $active = or $active (and (eq .Name "Tags") (eq
+        $current.Section "tags")) }}
         <li class="navItem">
             {{ .Pre }}
-            <a class="navLink" href="{{ .URL }}" title="{{ .Name }} page">
+            <a
+                class="navLink {{ if $active }}active{{ end }}"
+                href="{{ .URL }}"
+                title="{{ .Name }} page"
+            >
                 {{ .Name }}
             </a>
         </li>
         {{ end }}
     </ul>
 </nav>
+<a id="menu-toggle">Open</a>
 {{ end }}
