--- a/themes/monkey-theme/layouts/index.html
+++ b/themes/monkey-theme/layouts/index.html
@@ -1,3 +1,31 @@
 {{ define "main" }}
-    <p>{{ .Site.Title }}</p>
+<h1>{{ .Site.Title }}</h1>
+{{ $mainSections := .Site.Params.mainSections | default (slice "post") }} {{/*
+Create a variable with that section to use in multiple places. */}} {{ $section
+:= where .Site.RegularPages "Section" "in" $mainSections }} {{/* Check to see if
+the section is defined for ranging through it */}} {{ $section_count := len
+$section }} {{ if ge $section_count 1 }} {{/* Derive the section name */}} {{
+$section_name := index (.Site.Params.mainSections) 0 }}
+
+<div class="pa3 pa4-ns w-100 w-70-ns center">
+    {{ $n_posts := $.Param "recent_posts_number" | default 5 }}
+
+    <section class="w-100 mw8">
+        {{/* Range through the first $n_posts items of the section */}} {{ range
+        (first $n_posts $section) }}
+        <a href="{{ .Permalink }}" class="link black dim">{{ .Title }}</a>
+        <div class="relative w-100 mb4">{{ .Summary }}</div>
+        {{ end }}
+    </section>{{/* As above, Use $section_name to get the section title, and
+        URL. Use "with" to only show it if it exists */}} {{ with .Site.GetPage
+        "section" $section_name }}
+        <a
+            href="{{ .Permalink }}"
+            class="link db f6 pa2 br3 bg-mid-gray white dim w4 tc"
+            >{{ i18n "allTitle" . }}</a
+        >
+        {{ end }}
+    </section>
+    {{ end }}
+</div>
 {{ end }}
