--- a/themes/monkey-theme/assets/css/_globals.css
+++ b/themes/monkey-theme/assets/css/_globals.css
@@ -1,12 +1,6 @@
 body {
     background-color: #ffff;
-    background: fixed
-        linear-gradient(
-            to top right,
-            rgb(100, 29, 141) 0%,
-            rgba(30, 89, 177, 1) 40%,
-            rgba(0, 255, 160, 1) 100%
-        );
+    background: fixed var(--background-gradient);
     font-family: "Montserrat", sans-serif;
 }
 
@@ -21,9 +15,10 @@ p {
     justify-content: center;
     max-width: 960px;
     padding: 15px;
-    margin: 20px;
+    margin: auto;
 }
 
+/* .bg-black: background: rgba(0, 0, 0, 0.25); */
 .bg-white {
     color: var(--main-black);
     background: rgba(255, 255, 255, 0.25);
@@ -39,12 +34,3 @@ pre {
     border-radius: 10px;
     overflow: auto;
 }
-
-/* #main.a {
-    background: rgba(0, 0, 0, 0.25);
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-    backdrop-filter: blur(4px);
-    -webkit-backdrop-filter: blur(4px);
-    border-radius: 10px;
-    border: 1px solid rgba(255, 255, 255, 0.18);
-} */
