--- a/themes/monkey-theme/assets/css/_vars.css
+++ b/themes/monkey-theme/assets/css/_vars.css
@@ -1,4 +1,10 @@
 :root {
     --main-white: #fff;
     --main-black: #080808;
+    --background-gradient: linear-gradient(
+            to top right,
+            rgb(100, 29, 141) 0%,
+            rgba(30, 89, 177, 1) 40%,
+            rgba(0, 255, 160, 1) 100%
+        );
 }
