clean lists pages

--- a/themes/monkey-theme/layouts/index.html
+++ b/themes/monkey-theme/layouts/index.html
@@ -8,8 +8,10 @@ $section := where .Site.RegularPages "Section" "in" $mainSections }}
 
     <section class="w-100 mw8">
         {{ range (first $n_posts $section) }}
-        <a href="{{ .Permalink }}" class="link black dim">{{ .Title }}</a>
-        <div class="relative w-100 mb4">{{ .Summary }}</div>
+        <div class="list-content bg-white">
+            <a href="{{ .Permalink }}" class="link black dim">{{ .Title }}</a>
+            <div class="relative w-100 mb4">{{ .Summary }}</div>
+        </div>
         {{ end }}
     </section>
 </div>
