--- a/themes/monkey-theme/layouts/partials/head.html
+++ b/themes/monkey-theme/layouts/partials/head.html
@@ -7,5 +7,8 @@
     resources.Get "css/main.css" | resources.ToCSS $options | resources.PostCSS
     (dict "use" "postcss-cssnext") | minify }}
     <link rel="stylesheet" type="text/css" href="{{ $style.RelPermalink }}" />
+    {{ range .AlternativeOutputFormats -}} {{ printf `
+    <link rel="%s" type="%s" href="%s" title="%s" />
+    ` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }} {{ end -}}
     <title>{{ with .Params.Title }}{{ . }} | {{ end }}{{ .Site.Title }}</title>
 </head>
